# neonote

./: .dockerignore  .gitignore  README.md  generate_sdk.sh  pyproject.toml
backend/: .env.template  .gitignore  pyproject.toml
backend/app/: frontend.py  main.py  service.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: api_docs.py  auth.py  notes.py  users.py
backend/app/core/: config.py  db.py  logger.py  security.py  utils.py
backend/app/models/: __init__.py  note.py  user.py  utils.py
backend/app/repository/: note_repository.py  repository.py  user_repository.py
backend/app/scripts/: prestart.py
backend/app/service/: __init__.py  auth_service.py  note_service.py  user_service.py
backend/app/tests/: conftest.py
backend/app/tests/api/: test_auth.py  test_note.py  test_user.py
backend/app/tests/utils/: note.py  user.py
backend/app/utils/: config.py  db.py
backend/neonote/: __main__.py  frontend.py  main.py
backend/neonote/api/: deps.py  router.py
backend/neonote/api/routes/: api_docs.py  auth.py  notes.py  users.py  utils.py
backend/neonote/core/: config.py  db.py  logger.py  security.py  utils.py
backend/neonote/core/logger/: config_logger.py  logger.py
backend/neonote/models/: __init__.py
backend/neonote/repository/: note_repository.py  repository.py  user_repository.py
backend/neonote/scripts/: healthcheck.py  prestart.py
backend/neonote/service/: __init__.py  auth_service.py  note_service.py  user_service.py
backend/neonote/tests/: conftest.py
backend/neonote/tests/api/: test_auth.py  test_note.py  (+1 more)
(+78 files in other folders)
